# whyis_activitystreams

./: README.md  example_file.trig  example_file.ttl  pyproject.toml
perception_pipeline/: __init__.py
perception_pipeline/backbone_agent/: __init__.py  backbone_agent.py
perception_pipeline/geometric_attribute_detection_agent/: __init__.py  geometric_attribute_detection_agent.py
perception_pipeline/object_classification_agent/: __init__.py  object_classification_agent.py
perception_pipeline/object_detection_agent/: __init__.py  object_detection_agent.py
perception_pipeline/part_detection_agent/: __init__.py  part_detection_agent.py
perception_pipeline/photometric_attribute_detection_agent/: __init__.py  photometric_attribute_detection_agent.py
perception_pipeline/pipeline_agent/: __init__.py  backbone_agent.py  geometric_attribute_detection_agent.py  object_classification_agent.py  object_detection_agent.py  part_detection_agent.py  photometric_attribute_detection_agent.py  saliency_map_agent.py  uncertainty_attribution_agent.py
perception_pipeline/saliency_map_agent/: __init__.py  saliency_map_agent.py
perception_pipeline/uncertainty_attribution_agent/: __init__.py  uncertainty_attribution_agent.py
whyis_activitystreams/: __init__.py  _version.py  plugin.py
whyis_activitystreams/activity_agent/: __init__.py  activity_agent.py
