[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name='whyis-activitystreams'
version='0.1.3'
description = "A whyis plugin to support the interpretation of activity streams."
dependencies=[
  'whyis',
]

[tool.setuptools]
packages=[
  'whyis_activitystreams', 
  'whyis_activitystreams.activity_agent',
  'perception_pipeline',
  'perception_pipeline.backbone_agent',
  'perception_pipeline.geometric_attribute_detection_agent',
  'perception_pipeline.object_classification_agent',
  'perception_pipeline.object_detection_agent',
  'perception_pipeline.part_detection_agent',
  'perception_pipeline.photometric_attribute_detection_agent',
  'perception_pipeline.saliency_map_agent',
  'perception_pipeline.uncertainty_attribution_agent'
]

[project.entry-points.whyis]
whyis_activitystreams = "whyis_activitystreams:ActivityStreamsPlugin"
whyis_activity_agent = "whyis_activitystreams.activity_agent:ActivityAgent"
backbone_agent = "perception_pipeline.backbone_agent:BackboneAgent"
geometric_attribute_detection_agent = "perception_pipeline.geometric_attribute_detection_agent:GeometricAttributeDetectionAgent"
object_classification_agent = "perception_pipeline.object_classification_agent:ObjectClassificationAgent"
object_detection_agent = "perception_pipeline.object_detection_agent:ObjectDetectionAgent"
part_detection_agent = "perception_pipeline.part_detection_agent:PartDetectionAgent"
photometric_attribute_detection_agent = "perception_pipeline.photometric_attribute_detection_agent:PhotometricAttributeDetectionAgent"
self_compare_saliency_map_agent = "perception_pipeline.saliency_map_agent:SelfCompareSaliencyMapAgent"
uncertainty_attribution_agent = "perception_pipeline.uncertainty_attribution_agent:UncertaintyAttributionAgent"

